               ‘Risoe.BINfileData2RLum.Analysis’, this case the
               argument ‘fastForward’ will forced to ‘TRUE’,

             • argument ‘file’ now supports a ‘list’ of file names or
               just a path, in this case the funtions tries to detect
               and import all possible BIN/BINX files found in this
               path.

         • ‘readSPE2R()’

             • Set function on deprecated, new name: ‘read_SPE2R()’.

         • ‘readXSYG2R()’

             • Set function to deprecated, new name: ‘read_XSYG2R()’,

             • the argument ‘file’ can now handle a ‘list’ of files,
               along with this just a path to directory is allowed
               instead a path to a file.  In this case the function
               tries to import all XSYG-files that can be found in the
               directory,

             • the curves were not 'named' IRSL if laser diods instead
               of LEDs are facilitated in the lexsyg reader; fixed\

             • the element 'stimulator' and 'detecteur' appeared twice
               in the info element list after import, corrected.

         • ‘Risoe.BINfileData2RLum.Analysis()’

             • If the lower temperature for the TL curve calculation
               was not at 0, wrong shifted TL curves had been produced
               (this happens normally for BIN-files produced by FI
               lexsyg readers),

             • along with this the x-values for the curves are now
               consequently calcualted using the LOW and the HIGH
               values given in the BIN-files. This may cause a shift of
               the surves towards 0 for CW-curves (#235),

             • a new argument ‘grain’ can be used to further limit the
               transformation to specific grains in the data set,

             • the arguement ‘pos’ is no longer required. If nothing is
               provided every position will be transformed and the