@@ -135,4 +135,4 @@ Collate:
     'use_DRAC.R'
     'write_R2BIN.R'
     'zzz.R'
-RoxygenNote: 5.0.0
+RoxygenNote: 5.0.1
