@@ -834,7 +834,7 @@
 </td>
 <td class=cellinside>2015-11-08
 </td>
-<td class=cellinside>09:27:55
+<td class=cellinside>09:29:34
 
 </td>
 <td class=cellinside><br /> Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
@@ -1323,11 +1323,11 @@
 </td>
 <td class=cellinside><br /> Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL<br /> reader into R.<br />
 </td>
-<td class=cellinside>0.10.1
+<td class=cellinside>0.11.0
 </td>
-<td class=cellinside>2015-10-19
+<td class=cellinside>2015-11-11
 </td>
-<td class=cellinside>18:38:01
+<td class=cellinside>14:07:58
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France), Margret C. Fuchs, HZDR Freiberg, (Germany)<br />  R Luminescence Package Team
@@ -1420,9 +1420,9 @@
 </td>
 <td class=cellinside>0.2.1
 </td>
-<td class=cellinside>2015-10-19
+<td class=cellinside>2015-11-10
 </td>
-<td class=cellinside>18:38:01
+<td class=cellinside>17:51:27
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -1439,9 +1439,9 @@
 </td>
 <td class=cellinside>0.1.1
 </td>
-<td class=cellinside>2015-09-22
+<td class=cellinside>2015-11-10
 </td>
-<td class=cellinside>09:41:30
+<td class=cellinside>17:51:20
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
