@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.2 by xtable 1.8-0 package
-% Sun Nov  8 09:30:28 2015
+% Wed Nov 11 14:20:42 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -78,7 +78,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   41 & get\_Layout & Collection of layout definitions & $<$br /$>$ This helper function returns a list with layout definitions for homogeneous$<$br /$>$ plotting.$<$br /$>$ & 0.1 & 2015-09-22 & 09:41:30
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  42 & get\_Quote & Function to return essential quotes & $<$br /$>$ This function returns one of the collected essential quotes in the$<$br /$>$ growing library. If called without any parameters, a random quote is$<$br /$>$ returned.$<$br /$>$ & 0.1.1 & 2015-11-08 & 09:27:55
+  42 & get\_Quote & Function to return essential quotes & $<$br /$>$ This function returns one of the collected essential quotes in the$<$br /$>$ growing library. If called without any parameters, a random quote is$<$br /$>$ returned.$<$br /$>$ & 0.1.1 & 2015-11-08 & 09:29:34
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   43 & get\_rightAnswer & Function to get the right answer & $<$br /$>$ This function returns just the right answer$<$br /$>$ & 0.1.0 & 2015-09-24 & 16:32:32
  & $<$br /$>$ inspired by R.G.$<$br /$>$  R Luminescence Package Team \\ 
@@ -129,7 +129,7 @@
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany), Sebastian Kreutzer, IRAMAT-CRP2A,$<$br /$>$ Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   67 & plot\_ViolinPlot & Create a violin plot & $<$br /$>$ Draws a kernal densiy plot in combination with a boxplot in its middle. The shape of the violin$<$br /$>$ is constructed using a mirrored density curve. This plot is especially designed for cases$<$br /$>$ where the individual errors are zero or to small to be visualised. The idea for this plot is$<$br /$>$ based on the the 'volcano plot' in the ggplot2 package by Hadely Wickham and Winston Chang.$<$br /$>$ The general idea for the Violin Plot seems to be introduced by Hintze and Nelson (1998).$<$br /$>$ & 0.1.0 & 2015-10-06 & 23:28:52
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
-  68 & read\_BIN2R & Import Risoe BIN-file into R & $<$br /$>$ Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL$<$br /$>$ reader into R.$<$br /$>$ & 0.10.1 & 2015-10-19 & 18:38:01
+  68 & read\_BIN2R & Import Risoe BIN-file into R & $<$br /$>$ Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL$<$br /$>$ reader into R.$<$br /$>$ & 0.11.0 & 2015-11-11 & 14:07:58
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, HZDR Freiberg, (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   69 & read\_Daybreak2R & Import Daybreak ASCII dato into R & $<$br /$>$ Import a *.txt (ASCII) file produced by a Daybreak reader into R.$<$br /$>$ & 0.2.0 & 2015-10-16 & 18:19:05
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)  Based on suggestion by Willian Amidon and Andrew Louis Gorin.$<$br /$>$  R Luminescence Package Team \\ 
@@ -139,9 +139,9 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   72 & Risoe.BINfileData-class & Class  "Risoe.BINfileData" & $<$br /$>$ S4 class object for luminescence data in R. The object is produced as output$<$br /$>$ of the function  read\_BIN2R .$<$br /$>$ & 0.2.0
  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  73 & Risoe.BINfileData2RLum.Analysis & Convert Risoe.BINfileData object to an RLum.Analysis object & $<$br /$>$ Converts values from one specific position of a Risoe.BINfileData S4-class$<$br /$>$ object to an RLum.Analysis object.$<$br /$>$ & 0.2.1 & 2015-10-19 & 18:38:01
+  73 & Risoe.BINfileData2RLum.Analysis & Convert Risoe.BINfileData object to an RLum.Analysis object & $<$br /$>$ Converts values from one specific position of a Risoe.BINfileData S4-class$<$br /$>$ object to an RLum.Analysis object.$<$br /$>$ & 0.2.1 & 2015-11-10 & 17:51:27
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
-  74 & Risoe.BINfileData2RLum.Data.Curve & Convert an element from a Risoe.BINfileData object to an RLum.Data.Curve$<$br /$>$ object & $<$br /$>$ The function converts one specified single record from a Risoe.BINfileData$<$br /$>$ object to an RLum.Data.Curve object.$<$br /$>$ & 0.1.1 & 2015-09-22 & 09:41:30
+  74 & Risoe.BINfileData2RLum.Data.Curve & Convert an element from a Risoe.BINfileData object to an RLum.Data.Curve$<$br /$>$ object & $<$br /$>$ The function converts one specified single record from a Risoe.BINfileData$<$br /$>$ object to an RLum.Data.Curve object.$<$br /$>$ & 0.1.1 & 2015-11-10 & 17:51:20
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   75 & RLum-class & Class  "RLum" & $<$br /$>$ Abstract class for data in the package Luminescence$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$ \\ 
   76 & RLum.Analysis-class & Class  "RLum.Analysis" & $<$br /$>$ Object class containing analysis data for protocol analysis.$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$ \\ 
