@@ -73,7 +73,7 @@ other BIN/BINX-format versions are currently not supported. The
 implementation of version 07 support could not been tested so far.}.
 }
 \section{Function version}{
- 0.10.1 (2015-10-19 18:38:01)
+ 0.11.0 (2015-11-11 14:07:58)
 }
 \examples{
 
