@@ -368,7 +368,18 @@ Changes in version 0.5.0 (, 2015):
              • argument ‘file’ now supports a ‘list’ of file names or
                just a path, in this case the funtions tries to detect
                and import all possible BIN/BINX files found in this
-               path.
+               path,
+
+             • in really seldom cases, if an old BIN-file (03) version
+               was used, the 'LTYPE' become OSL, while the used
+               'LIGHTSOURCE' was "IR diodes/IR Laser". Sometimes this
+               led to unexpected behaviour in the subsequent analysis
+               functions. Now the import function checks imported
+               BIN-files (only version 03) for such discrepancy and
+               correct the 'LTYPE' accordingly,
+
+             • import speed improvements by using lookup talbes instead
+               of 'sapply'-translation matrices.
 
          • ‘readSPE2R()’
 
